--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Angular Tutorial</title>
-        <link rel="stylesheet" href="/content/css/styles.css">
+        <link rel="stylesheet" href="content/css/styles.css" type="text/css">
     </head>
     <body>
-        
+
     </body>
 </html>
