--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Angular Tutorial</title>
         <link rel="stylesheet" href="content/css/styles.css" type="text/css">
+        <script src="app\lib\angular.min.js"></script>
     </head>
     <body>
 
